/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface AddProductToCart
 */
export interface AddProductToCart {
    /**
     * 
     * @type {string}
     * @memberof AddProductToCart
     */
    cartId?: string;
    /**
     * 
     * @type {string}
     * @memberof AddProductToCart
     */
    productId?: string;
    /**
     * 
     * @type {number}
     * @memberof AddProductToCart
     */
    count?: number;
}

export function AddProductToCartFromJSON(json: any): AddProductToCart {
    return AddProductToCartFromJSONTyped(json, false);
}

export function AddProductToCartFromJSONTyped(json: any, ignoreDiscriminator: boolean): AddProductToCart {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'cartId': !exists(json, 'cartId') ? undefined : json['cartId'],
        'productId': !exists(json, 'productId') ? undefined : json['productId'],
        'count': !exists(json, 'count') ? undefined : json['count'],
    };
}

export function AddProductToCartToJSON(value?: AddProductToCart | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'cartId': value.cartId,
        'productId': value.productId,
        'count': value.count,
    };
}


