/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface ContactInfoDto
 */
export interface ContactInfoDto {
    /**
     * 
     * @type {string}
     * @memberof ContactInfoDto
     */
    id?: string;
    /**
     * 
     * @type {string}
     * @memberof ContactInfoDto
     */
    email?: string | null;
    /**
     * 
     * @type {string}
     * @memberof ContactInfoDto
     */
    phoneNumber?: string | null;
}

export function ContactInfoDtoFromJSON(json: any): ContactInfoDto {
    return ContactInfoDtoFromJSONTyped(json, false);
}

export function ContactInfoDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): ContactInfoDto {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'id': !exists(json, 'id') ? undefined : json['id'],
        'email': !exists(json, 'email') ? undefined : json['email'],
        'phoneNumber': !exists(json, 'phoneNumber') ? undefined : json['phoneNumber'],
    };
}

export function ContactInfoDtoToJSON(value?: ContactInfoDto | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'id': value.id,
        'email': value.email,
        'phoneNumber': value.phoneNumber,
    };
}


