/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface CreateCustomer
 */
export interface CreateCustomer {
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    firstName?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    lastName?: string | null;
    /**
     * 
     * @type {Date}
     * @memberof CreateCustomer
     */
    dateOfBirth?: Date;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    country?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    city?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    street?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    streetNumber?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    postCode?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    email?: string | null;
    /**
     * 
     * @type {string}
     * @memberof CreateCustomer
     */
    phoneNumber?: string | null;
}

export function CreateCustomerFromJSON(json: any): CreateCustomer {
    return CreateCustomerFromJSONTyped(json, false);
}

export function CreateCustomerFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateCustomer {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'firstName': !exists(json, 'firstName') ? undefined : json['firstName'],
        'lastName': !exists(json, 'lastName') ? undefined : json['lastName'],
        'dateOfBirth': !exists(json, 'dateOfBirth') ? undefined : (new Date(json['dateOfBirth'])),
        'country': !exists(json, 'country') ? undefined : json['country'],
        'city': !exists(json, 'city') ? undefined : json['city'],
        'street': !exists(json, 'street') ? undefined : json['street'],
        'streetNumber': !exists(json, 'streetNumber') ? undefined : json['streetNumber'],
        'postCode': !exists(json, 'postCode') ? undefined : json['postCode'],
        'email': !exists(json, 'email') ? undefined : json['email'],
        'phoneNumber': !exists(json, 'phoneNumber') ? undefined : json['phoneNumber'],
    };
}

export function CreateCustomerToJSON(value?: CreateCustomer | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'firstName': value.firstName,
        'lastName': value.lastName,
        'dateOfBirth': value.dateOfBirth === undefined ? undefined : (value.dateOfBirth.toISOString()),
        'country': value.country,
        'city': value.city,
        'street': value.street,
        'streetNumber': value.streetNumber,
        'postCode': value.postCode,
        'email': value.email,
        'phoneNumber': value.phoneNumber,
    };
}


