/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface CreateOrder
 */
export interface CreateOrder {
    /**
     * 
     * @type {string}
     * @memberof CreateOrder
     */
    cartId?: string;
    /**
     * 
     * @type {string}
     * @memberof CreateOrder
     */
    customerId?: string;
}

export function CreateOrderFromJSON(json: any): CreateOrder {
    return CreateOrderFromJSONTyped(json, false);
}

export function CreateOrderFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateOrder {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'cartId': !exists(json, 'cartId') ? undefined : json['cartId'],
        'customerId': !exists(json, 'customerId') ? undefined : json['customerId'],
    };
}

export function CreateOrderToJSON(value?: CreateOrder | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'cartId': value.cartId,
        'customerId': value.customerId,
    };
}


