/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface CurrencyDto
 */
export interface CurrencyDto {
    /**
     * 
     * @type {string}
     * @memberof CurrencyDto
     */
    code?: string | null;
    /**
     * 
     * @type {number}
     * @memberof CurrencyDto
     */
    decimalPlaces?: number;
}

export function CurrencyDtoFromJSON(json: any): CurrencyDto {
    return CurrencyDtoFromJSONTyped(json, false);
}

export function CurrencyDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): CurrencyDto {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'code': !exists(json, 'code') ? undefined : json['code'],
        'decimalPlaces': !exists(json, 'decimalPlaces') ? undefined : json['decimalPlaces'],
    };
}

export function CurrencyDtoToJSON(value?: CurrencyDto | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'code': value.code,
        'decimalPlaces': value.decimalPlaces,
    };
}


