/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface EditAddress
 */
export interface EditAddress {
    /**
     * 
     * @type {string}
     * @memberof EditAddress
     */
    id?: string;
    /**
     * 
     * @type {string}
     * @memberof EditAddress
     */
    country?: string | null;
    /**
     * 
     * @type {string}
     * @memberof EditAddress
     */
    city?: string | null;
    /**
     * 
     * @type {string}
     * @memberof EditAddress
     */
    street?: string | null;
    /**
     * 
     * @type {string}
     * @memberof EditAddress
     */
    streetNumber?: string | null;
    /**
     * 
     * @type {string}
     * @memberof EditAddress
     */
    postCode?: string | null;
}

export function EditAddressFromJSON(json: any): EditAddress {
    return EditAddressFromJSONTyped(json, false);
}

export function EditAddressFromJSONTyped(json: any, ignoreDiscriminator: boolean): EditAddress {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'id': !exists(json, 'id') ? undefined : json['id'],
        'country': !exists(json, 'country') ? undefined : json['country'],
        'city': !exists(json, 'city') ? undefined : json['city'],
        'street': !exists(json, 'street') ? undefined : json['street'],
        'streetNumber': !exists(json, 'streetNumber') ? undefined : json['streetNumber'],
        'postCode': !exists(json, 'postCode') ? undefined : json['postCode'],
    };
}

export function EditAddressToJSON(value?: EditAddress | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'id': value.id,
        'country': value.country,
        'city': value.city,
        'street': value.street,
        'streetNumber': value.streetNumber,
        'postCode': value.postCode,
    };
}


