/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
/**
 * 
 * @export
 * @interface EditContactInfo
 */
export interface EditContactInfo {
    /**
     * 
     * @type {string}
     * @memberof EditContactInfo
     */
    contactInfoId?: string;
    /**
     * 
     * @type {string}
     * @memberof EditContactInfo
     */
    email?: string | null;
    /**
     * 
     * @type {string}
     * @memberof EditContactInfo
     */
    phoneNumber?: string | null;
}

export function EditContactInfoFromJSON(json: any): EditContactInfo {
    return EditContactInfoFromJSONTyped(json, false);
}

export function EditContactInfoFromJSONTyped(json: any, ignoreDiscriminator: boolean): EditContactInfo {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'contactInfoId': !exists(json, 'contactInfoId') ? undefined : json['contactInfoId'],
        'email': !exists(json, 'email') ? undefined : json['email'],
        'phoneNumber': !exists(json, 'phoneNumber') ? undefined : json['phoneNumber'],
    };
}

export function EditContactInfoToJSON(value?: EditContactInfo | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'contactInfoId': value.contactInfoId,
        'email': value.email,
        'phoneNumber': value.phoneNumber,
    };
}


