/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
import {
    ProductDto,
    ProductDtoFromJSON,
    ProductDtoFromJSONTyped,
    ProductDtoToJSON,
} from './';

/**
 * 
 * @export
 * @interface ProductCartDto
 */
export interface ProductCartDto {
    /**
     * 
     * @type {ProductDto}
     * @memberof ProductCartDto
     */
    product?: ProductDto;
    /**
     * 
     * @type {number}
     * @memberof ProductCartDto
     */
    count?: number;
}

export function ProductCartDtoFromJSON(json: any): ProductCartDto {
    return ProductCartDtoFromJSONTyped(json, false);
}

export function ProductCartDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): ProductCartDto {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'product': !exists(json, 'product') ? undefined : ProductDtoFromJSON(json['product']),
        'count': !exists(json, 'count') ? undefined : json['count'],
    };
}

export function ProductCartDtoToJSON(value?: ProductCartDto | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'product': ProductDtoToJSON(value.product),
        'count': value.count,
    };
}


