/* tslint:disable */
/* eslint-disable */
/**
 * MVCApi
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
import {
    ProductDto,
    ProductDtoFromJSON,
    ProductDtoFromJSONTyped,
    ProductDtoToJSON,
} from './';

/**
 * 
 * @export
 * @interface ProductDtoIPaginatedList
 */
export interface ProductDtoIPaginatedList {
    /**
     * 
     * @type {number}
     * @memberof ProductDtoIPaginatedList
     */
    readonly pageIndex?: number;
    /**
     * 
     * @type {number}
     * @memberof ProductDtoIPaginatedList
     */
    readonly pageSize?: number;
    /**
     * 
     * @type {number}
     * @memberof ProductDtoIPaginatedList
     */
    readonly totalPages?: number;
    /**
     * 
     * @type {boolean}
     * @memberof ProductDtoIPaginatedList
     */
    readonly hasPreviousPage?: boolean;
    /**
     * 
     * @type {boolean}
     * @memberof ProductDtoIPaginatedList
     */
    readonly hasNextPage?: boolean;
    /**
     * 
     * @type {Array<ProductDto>}
     * @memberof ProductDtoIPaginatedList
     */
    readonly items?: Array<ProductDto> | null;
}

export function ProductDtoIPaginatedListFromJSON(json: any): ProductDtoIPaginatedList {
    return ProductDtoIPaginatedListFromJSONTyped(json, false);
}

export function ProductDtoIPaginatedListFromJSONTyped(json: any, ignoreDiscriminator: boolean): ProductDtoIPaginatedList {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'pageIndex': !exists(json, 'pageIndex') ? undefined : json['pageIndex'],
        'pageSize': !exists(json, 'pageSize') ? undefined : json['pageSize'],
        'totalPages': !exists(json, 'totalPages') ? undefined : json['totalPages'],
        'hasPreviousPage': !exists(json, 'hasPreviousPage') ? undefined : json['hasPreviousPage'],
        'hasNextPage': !exists(json, 'hasNextPage') ? undefined : json['hasNextPage'],
        'items': !exists(json, 'items') ? undefined : (json['items'] === null ? null : (json['items'] as Array<any>).map(ProductDtoFromJSON)),
    };
}

export function ProductDtoIPaginatedListToJSON(value?: ProductDtoIPaginatedList | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
    };
}


