namespace MVCApi.Domain.Enums
{
    public enum OrderState
    {
        New,
        InProgress,
        Ended
    }
}